# Senior_Thesis

./: .gitignore  README.md  environment.yml  nohup.out  setup.sh
WOFOSTGym/: .gitignore  commands.txt  environment.yml  nohup.out  pyproject.toml  run_test.sh  utils.py
WOFOSTGym/data_generation/: gen_data.py
WOFOSTGym/data_plotting/: vis_data.py  vis_data_tensorboard.py
WOFOSTGym/env_config/: state_names.yaml  state_ranges.yaml  state_units.yaml
WOFOSTGym/env_config/agro/: grape_agro.yaml  maize_agro.yaml
WOFOSTGym/env_config/crop/: barley.yaml  cassava.yaml  chickpea.yaml  cotton.yaml  cowpea.yaml  fababean.yaml  grape.yaml  groundnut.yaml  jujube.yaml  maize.yaml  millet.yaml  mungbean.yaml  pear.yaml  pigeonpea.yaml  potato.yaml  rapeseed.yaml  rice.yaml  seed_onion.yaml  sorghum.yaml  soybean.yaml  sugarbeet.yaml  sugarcane.yaml  sunflower.yaml  sweetpotato.yaml  tobacco.yaml  wheat.yaml
WOFOSTGym/gui/: README.md
WOFOSTGym/imitation/: pyproject.toml
WOFOSTGym/imitation/imitation/algorithms/: base.py
WOFOSTGym/imitation/imitation/data/: buffer.py  huggingface_utils.py  rollout.py  serialize.py  types.py  wrappers.py
WOFOSTGym/imitation/imitation/rewards/: reward_wrapper.py  serialize.py
WOFOSTGym/imitation/imitation/scripts/: analyze.py
WOFOSTGym/imitation/imitation/testing/: expert_trajectories.py
WOFOSTGym/imitation/imitation/util/: util.py
WOFOSTGym/pcse/: pyproject.toml
WOFOSTGym/pcse/pcse/: __init__.py  nasapower.py  util.py
WOFOSTGym/pcse/pcse/base/: dispatcher.py  engine.py  simulationobject.py  states_rates.py  timer.py  variablekiosk.py
WOFOSTGym/pcse/pcse/crop/: __init__.py  evapotranspiration.py  leaf_dynamics.py  npk_dynamics.py  partitioning.py  phenology.py  respiration.py  root_dynamics.py  stem_dynamics.py  storage_organ_dynamics.py  wofost8.py
WOFOSTGym/pcse/pcse/fileinput/: yaml_agro_loader.py  yaml_cropdataprovider.py
WOFOSTGym/pcse/pcse/pydispatch/: __init__.py  dispatcher.py  robust.py  robustapply.py  saferef.py
WOFOSTGym/pcse/pcse/soil/: __init__.py  npk_soil_dynamics.py  soil_profile.py  soil_wrappers.py
WOFOSTGym/pcse/pcse/utils/: __init__.py  decorators.py  exceptions.py  traitlets.py
WOFOSTGym/pcse_gym/: pyproject.toml
WOFOSTGym/pcse_gym/pcse_gym/: __init__.py  exceptions.py
WOFOSTGym/pcse_gym/pcse_gym/envs/: __init__.py
WOFOSTGym/pcse_gym/pcse_gym/wrappers/: wrappers.py
WOFOSTGym/rl_algs/: DQN.py  PPO.py  RPPO.py  SAC.py  rl_utils.py
WOFOSTGym/stable-baselines3/stable_baselines3/a2c/: a2c.py
WOFOSTGym/stable-baselines3/stable_baselines3/common/: base_class.py  buffers.py  callbacks.py  logger.py  (+10 more)
WOFOSTGym/stable-baselines3/tests/: test_cnn.py  test_distributions.py  test_her.py  test_save_load.py  test_train_eval_mode.py  test_utils.py  test_vec_normalize.py  test_vec_stacked_obs.py
(+248 files in other folders)
