[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wofost-gym"
version = "1.1.0"
dependencies = [
  "pcse",
  "pcse_gym",
  "tyro",
  "omegaconf",
  "torch",
  "tensorboard",
  "tqdm",
  "huggingface_sb3",
  "imitation",
  "stable_baselines3"
]
requires-python = ">=3.12"
authors = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"},
]
maintainers = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"}
]
description = "Base directory for WOFOSTGym"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["Crop", "Model", "WOFOST", "Reinforcement Learning"]
classifiers = [
  "Development Status :: 6 - Mature",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://intelligent-reliable-autonomous-systems.github.io/WOFOSTGym-Site/"
Documentation = "https://intelligent-reliable-autonomous-systems.github.io/WOFOSTGym-Docs/"
Repository = "https://github.com/Intelligent-Reliable-Autonomous-Systems/WOFOST-Gym"
"Bug Tracker" = "https://github.com/Intelligent-Reliable-Autonomous-Systems/WOFOST-Gym"
Changelog = "https://github.com/Intelligent-Reliable-Autonomous-Systems/WOFOST-Gym"