[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imitation"
version = "1.0.0"
dependencies = [
  "numpy"
]
requires-python = ">=3.10"
authors = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"},
]
maintainers = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"}
]
description = "Modified PCSE directory"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["Crop", "Model", "WOFOST"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/wsolow/pcse"
Documentation = "https://github.com/wsolow/pcse"
Repository = "https://github.com/wsolow/pcse"
"Bug Tracker" = "https://github.com/wsolow/pcse"
Changelog = "https://github.com/wsolow/pcse"

