[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pcse_gym"
version = "1.1.0"
dependencies = [
  "pcse",
  "gymnasium",
  "numpy",
  "pandas",
  "pyyaml",
  "pygame",
  "matplotlib",
]
requires-python = ">=3.12"
authors = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"},
]
maintainers = [
  {name = "Will Solow", email = "soloww@oregonstate.edu"}
]
description = "Gym wrapper for the PCSE environment"
readme = "README.md"
license = {file = "LICENSE.md"}
keywords = ["pcse", "gym", "gymnasium"]
classifiers = [
  "Development Status :: 6 - Mature",
  "Programming Language :: Python"
]


